# llama

./: .dockerignore  .env  .env.dev  .env.docker  .gitignore  Dockerfile  Dockerfile-env  README.md  calculate.py  check.py  debian.sources  embeddingfunction.py  export.py  llm.py  models.py  ocr.py  odr.py  pyproject.toml  requirements.txt  train.py
.files/7002e0dd-ab8e-4a0a-a0b7-2ef2d4e82f52/: 20a5f2f0-6f98-4662-80bf-cf99082a20cc.txt  8440b09d-5640-4584-a86c-f42a3ef10953.txt
chainlit_odr/: default.py  odr.py  setting.py
common/: default.py  embedding.py
data/: 18 HDR-病案模型目录.xlsx  ODR模型说明.xlsx
deploy/: quick_start.yml
dify/: api.py
medical_record/: data_models.py  database.py  tool_call.py  util.py
milvus/: index_store.json
odr/: embedding.py  odr.py  setting.py  train.py
workflow_odr/: default.py  quick_start.yml  workflow.py
