[project]
name = "llama"
version = "0.1.0"
description = ""
authors = [
    {name = "mayifan",email = "mayifan@lrhealth.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "openai (>=1.63.0,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "numpy (==1.26.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "torch (==2.2.2)",
    "cryptography (>=44.0.1,<45.0.0)",
    "pymilvus[model] (>=2.5.4,<3.0.0)",
    "simple-ddl-parser (>=1.7.1,<2.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "flagembedding (>=1.3.4,<2.0.0)",
    "llama-index (>=0.12.19,<0.13.0)",
    "llama-index-embeddings-huggingface (>=0.5.1,<0.6.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "llama-index-vector-stores-milvus (>=0.5.0,<0.6.0)",
    "llama-index-llms-openai-like (>=0.3.3,<0.4.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
